--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "token": "MTA0NzE3OTczMjQxODA0ODEzMA.GVtihB.Kce6wgUhjtl8M40LGmWei_LXoUtfukwxo069CE",
+    "token": "ТОКЕН БОТА",
     "cfg": {
         "intents": [
             "GUILDS",
